# selfsupervised_flow

./: .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE.md  MAINTAINERS.md  PROVIDER_INFORMATION.md  README.md  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: template-for-mbition-employees.md
cfgattrdict/: __init__.py  basics.py  pythonic_yaml_handlers.py
dl_np_tools/: __init__.py  casting.py  mod_available.py
labelmap/: __init__.py
npimgtools/: __init__.py  transforms.py
scripts/: build_all.bash  set_env_variables.bash
tfrecutils/: __init__.py
unsup_flow/: __init__.py  cli.py
unsup_flow/blocks/: __init__.py  point_pillars.py
unsup_flow/config/: broken_samples.yml  config.yml  kitti_raw_dont_use_these_samples.yml  label_mappings.yml  splits.yml
unsup_flow/datasets/kitti/: create.py
unsup_flow/datasets/kitti_sf/: create.py  weighted_pc_alignment.py
unsup_flow/datasets/nuscenes/: create.py  nuscenes_parser.py
unsup_flow/experiment/: artificial_labels.py  decoder.py  experiment.py  losses.py  movavg_cls_threshold.py  static_aggregation.py  transform_pointwise_bev.py
unsup_flow/experiment/raft/: raft_model.py
unsup_flow/experiment/raft/layers/: __init__.py  corr.py  extractor.py  update.py  upsampling.py
unsup_flow/io_tools/: best_metric_logger.py
unsup_flow/knn/: knn_wrapper.py  plane_geometry.py
unsup_flow/layers/: schedules.py
unsup_flow/losses/: __init__.py  static_points_loss.py  static_points_loss_test.py  weighted_pc_alignment.py
unsup_flow/tf/: __init__.py  numerical_stability.py  relaxed_tf_function.py  relaxed_tf_function_test.py
unsup_flow/tf_user_ops/: CMakeLists.txt  __init__.py  build_cmake.bash
unsup_flow/tf_user_ops/cmake/modules/: FindTensorflow.cmake
unsup_flow/tf_user_ops/src/points_to_voxel/: CMakeLists.txt  points_to_voxel_op.cc
unsup_flow/tf_user_ops/src/tf_knn_op/: CMakeLists.txt  k_nearest_neighbor.cc  k_nearest_neighbor_kernel.cc  k_nearest_neighbor_op.cc  k_nearest_neighbor_op.h
usfl_io/: __init__.py  batching.py  io_tools.py
